Hided some information due to privacy policy

--- a/Designing parsed data and automized reports/parse, merge, compare, color, align, export.ipynb
+++ b/Designing parsed data and automized reports/parse, merge, compare, color, align, export.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = 'https://www.kdlolymp.kz/pricelist/'"
+    "URL = 'url'"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_var = 'Астана'"
+    "city_var = 'city'"
    ]
   },
   {
@@ -120,8 +120,8 @@
    "outputs": [],
    "source": [
     "path = '..\\\\data\\\\by_cities\\\\astana\\\\'\n",
-    "input_file = path + 'Astana 22.02.xlsx'\n",
-    "output_file = path + 'Astana 22.02 edited.xlsx'\n",
+    "input_file = path + 'input_file'\n",
+    "output_file = path + 'output_file'\n",
     "ext = '.xlsx'"
    ]
   },
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "df_pl_lis = pd.read_excel(path + 'Конструктор_отчетов_все_услуги_по_регионам.xlsx', sheet_name=city_var)\n",
+    "df_pl_lis = pd.read_excel(path + 'file_to_merge', sheet_name=city_var)\n",
     "df_pl_lis.rename(columns={'Код': 'Код_услуги', 'Название': 'Название_ЛИС', 'Группа услуг': 'Подразделение'}, inplace=True)\n",
     "\n",
     "df_pl_lis.shape"
