--- a/Designing parsed data and automized reports/parse, merge, compare, color, align, export.ipynb
+++ b/Designing parsed data and automized reports/parse, merge, compare, color, align, export.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '..\\\\data\\\\by_cities\\\\astana\\\\'\n",
+    "path = 'path'\n",
     "input_file = path + 'input_file'\n",
     "output_file = path + 'output_file'\n",
     "ext = '.xlsx'"
@@ -422,14 +422,6 @@
     "writer.close()\n",
     "print('The task is completed!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5543f61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
